2.1-beta 11
===========
- multline parsed literals now make a more sincere effort to track which 
  line number a variable was encountered at.
- fixed a bug with multi-line parsed literals where a variable followed 
  immediately by a newline was not being "terminated"
- fixed a bug with && and & followed by a HOES expression being mistaken 
  for a function reference token.

2.1-beta 10 (20 Nov 06)
===========
- added sizeof("data format") to return the size (in bytes) of the
  data structure represented by the specified format string. 
- attempting an invalid usage of the index op now fires a runtime
  warning notifying the scripter of what happened.
- added \x and \u escapes for parsed literal strings... \x## allows a
  char to be specified and \u#### allows a unicode char to be specified.
  # is expected to be a valid hex character.
- updated println, readln, read, readAll, and printAll to be unicode
  aware, the platform encoding is used by default.
- added &setEncoding($handle, "charset name") to set the encoding to use
  with the specified handle.
- added &readc($handle) for reading a single character from an I/O handle.
- parser no longer assumes a bareword in a expression is a function handle
  reference.  should stop some frustrating errors :)
- fixed a silly bug with tuple assignment where hash right hand side was
  being converted to a string before being assigned to the individual
  elements.
- added assignment ops i.e. +=, -=, *=, /=, &=, |=, ^=, <<=, >>=, and .=
  using these ops will assign the result of the op applied to the assignment 
  value and the right hand side.  this works as expected with normal
  and tuple assignment.
- using a tuple assignment op has a special case: expand array
  a single array value specified within a tuple will be expanded as if each 
  of its elements were specified within the expression i.e.:
  (@a) += @(3, 4, 5); is equivalent to: (@a[0], @a[1], @[2]) += @(3, 4, 5)