@@ -114,6 +114,7 @@ public class BasicUtilities implements Function, Loadable, Predicate
 
         // closure / function handle type stuff
         temp.put("&lambda",    new lambda());
+        temp.put("&unlambda",    temp.get("&lambda"));
 
         function funcs = new function();
         temp.put("&function",  funcs);
@@ -474,7 +475,15 @@ public class BasicUtilities implements Function, Loadable, Predicate
           SleepClosure value;
  
           SleepClosure temp = BridgeUtilities.getFunction(l, si);           
-          value = new SleepClosure(si, temp.getRunnableCode());
+
+          if (n.equals("&lambda"))
+          {
+             value = new SleepClosure(si, temp.getRunnableCode());
+          }
+          else
+          {
+             value = temp;
+          }
            
           Variable vars = value.getVariables();
 
